# waterwatch

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dev-requirements.txt  docker-compose.test.yaml  docker-compose.yaml  dockerfile.backend  dockerfile.frontend  generate_doc.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup.sh  test-reset-db.sh  test-setup.sh  typedoc.json
.github/workflows/: draft-pdf.yaml
.gitlab/issue_templates/: bugreport.md  featuresuggestions.md
.gitlab/merge_request_templates/: mrtemplate.md
assets/: countries_1.sql  countries_2.sql
backend/: groups.py  locustfile.py  requirements.txt
backend/api/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/campaigns/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/measurement_analysis/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/measurement_collection/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/measurement_export/: admin.py  apps.py  factories.py  models.py  serializers.py  signals.py  strategies.py  tests.py  urls.py  utils.py  views.py
backend/measurements/: admin.py  apps.py  metrics.py  models.py  tests.py  urls.py  views.py
docs/: README.md  admin_api.md  api_specs.md  architecture.md  backend.md  campaigns.md  campaigns_api.md  conf.py  contribution_guide.md  development.md  diagrams.md  e2e_test.md  frontend_docs.md  index.md  installation.md  load_test.md  manual_test.md  measurement_analysis.md  measurement_collection.md  measurement_export.md  measurements.md  measurements_api.md  modules.md  schema.md  troubleshooting.md  users_api.md
docs/api_specs/: WATERWATCH_API.yaml  api_specs.md  campaigns_api.md  measurements_api.md  users_api.md
docs/development/: contribution_guide.md  deployment.md  development.md  frontend_docs.md  installation.md  troubleshooting.md
docs/diagrams/: architecture.md  schema.md
docs/e2e_testing/: e2e-export-001.md  e2e-export-002.md  e2e-export-003.md  e2e-export-004.md  (+3 more)
frontend/: .gitignore  .prettierrc  eslint.config.js  generate_doc.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.js
paper/: paper.bib  paper.md
production/: .env.sample  deploy.sh  docker-compose.prod.stack.yaml  docker-compose.prod.yaml  dockerfile.backend.prod  dockerfile.frontend.prod  production.nginx  setup.sh
requirements/: dev-requirements.txt  doc-requirements.txt  packages.txt  requirements.txt
scripts/: setup.sh  test-reset-db.sh  test-setup.sh
(+471 files in other folders)
