[project]
name = "WATERWATCH"
version = "0.0.1"
description = "A global citizen science platform for tracking water temperatures and climate change impacts."
readme = "README.md"
authors = [
    { name = "TMBood", email = "T.M.Bood@student.tudelft.nl" },
    { name = "SSchultz", email = "S.M.Schultz@student.tudelft.nl" },
    { name = "NJHammer", email = "N.J.Hammer@student.tudelft.nl" },
    { name = "EKoprivanacz", email = "E.Koprivanacz@student.tudelft.nl" },
    { name = "PBAvandenHaspel", email = "P.B.A.vandenhaspel@student.tudelft.nl" }
]

license = "MIT"
requires-python = ">=3.12.0"

dependencies = [
    "asgiref==3.8.1",
    "Django==5.2",
    "psycopg==3.2.7",
    "psycopg-binary==3.2.7",
    "sqlparse==0.5.3",
    "typing_extensions==4.13.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.8",
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    "**/migrations/*.py",
    ".venv",
    ".git",
    ".ruff_cache",
    ".vscode",
]

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle
    "EXE", # flake8-executable
    "F",   # flake8
    "G",   # flake8-logging-format
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # ruff-specific rules
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "T10", # flake8-print
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP",  # pyupgrade
]
ignore = [
    "RUF012",
    "TRY003",
    "D105",
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/migrations/**.py" = ["D100", "D101", "D102", "D103", "E501", "RUF012"]
"**/tests/**/*.py" = ["S101", "E501", "PLR0917", "ISC001", "D100", "D101", "D102", "PLR0913", "PLR2004"]
"**/*serializer*.py" = ["N815", "D106"]
"**/views.py" = ["N815"]
"**/__init__.py" = ["D104"]
"**/models.py" = ["COM819", "D106"]
"docs/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
